@@ -20,34 +20,63 @@
 
 #include "CloudDelayerBase.h"
 
-#include "IPv4ControlInfo.h"
-#include "IPv6ControlInfo.h"
+#include "IPv4.h"
 
 Define_Module(CloudDelayerBase);
 
 #define SRCPAR "incomingInterfaceID"
 
+CloudDelayerBase::CloudDelayerBase()
+{
+    ipv4Layer = NULL;
+}
+
+CloudDelayerBase::~CloudDelayerBase()
+{
+    //TODO unregister hook if ipv4Layer exists
+    ipv4Layer = check_and_cast_nullable<IPv4*>(getModuleByPath("^.ip"));
+    if (ipv4Layer)
+        ipv4Layer->unregisterHook(0, this);
+}
+
+void CloudDelayerBase::initialize()
+{
+    ipv4Layer = check_and_cast<IPv4*>(getModuleByPath("^.ip"));
+    ipv4Layer->registerHook(0, this);
+}
+
+void CloudDelayerBase::finish()
+{
+    if (ipv4Layer)
+        ipv4Layer->unregisterHook(0, this);
+    ipv4Layer = NULL;
+}
+
 void CloudDelayerBase::handleMessage(cMessage *msg)
 {
-    int srcID = -1, destID = -1;
+    if (msg->isSelfMessage())
+        ipv4Layer->reinjectQueuedDatagram(check_and_cast<IPv4Datagram *>(msg));
+}
 
-    if (msg->hasPar(SRCPAR))
-    {
-        cMsgPar& p = msg->par(SRCPAR);
-        srcID = p.longValue();
-        delete msg->getParList().remove(&p);
-    }
+void CloudDelayerBase::calculateDropAndDelay(const cMessage *msg, int srcID, int destID, bool& outDrop, simtime_t& outDelay)
+{
+    outDrop = false;
+    outDelay = SIMTIME_ZERO;
+}
 
-    cObject *ci = msg->getControlInfo();
-    if (dynamic_cast<IPv4ControlInfo*>(ci))
-        destID = (dynamic_cast<IPv4ControlInfo*>(ci))->getInterfaceId();
-    if (dynamic_cast<IPv4RoutingDecision*>(ci))
-        destID = (dynamic_cast<IPv4RoutingDecision*>(ci))->getInterfaceId();
-    else if (dynamic_cast<IPv6ControlInfo*>(ci))
-        destID = (dynamic_cast<IPv6ControlInfo*>(ci))->getInterfaceId();
-    else
-        throw cRuntimeError("Cannot determine destination interface id from packet");
+INetfilter::IHook::Result CloudDelayerBase::datagramPreRoutingHook(IPv4Datagram * datagram, const InterfaceEntry * inputInterfaceEntry, const InterfaceEntry *& outputInterfaceEntry, IPv4Address & nextHopAddress)
+{
+    return INetfilter::IHook::ACCEPT;
+}
 
+INetfilter::IHook::Result CloudDelayerBase::datagramForwardHook(IPv4Datagram * datagram, const InterfaceEntry * inputInterfaceEntry, const InterfaceEntry *& outputInterfaceEntry, IPv4Address & nextHopAddress)
+{
+    Enter_Method_Silent();
+
+    int srcID = inputInterfaceEntry ? inputInterfaceEntry->getInterfaceId() : -1;
+    int destID = outputInterfaceEntry->getInterfaceId();
+
+    cMessage *msg = check_and_cast<cMessage *>(datagram);
     simtime_t propDelay;
     bool isDrop;
     calculateDropAndDelay(msg, srcID, destID, isDrop, propDelay);
@@ -55,19 +84,32 @@ void CloudDelayerBase::handleMessage(cMessage *msg)
     {
         //TODO emit?
         EV << "Message " << msg->info() << " dropped in cloud.\n";
-        delete msg;
+        return INetfilter::IHook::DROP;
     }
-    else
+
+    if (propDelay > SIMTIME_ZERO)
     {
         //TODO emit?
         EV << "Message " << msg->info() << " delayed with " << propDelay*1000.0 << "ms in cloud.\n";
-        sendDelayed(msg, propDelay, "ipOut");
+        take(msg);
+        scheduleAt(simTime() + propDelay, msg);
+        return INetfilter::IHook::QUEUE;
     }
+    return INetfilter::IHook::ACCEPT;
 }
 
-void CloudDelayerBase::calculateDropAndDelay(const cMessage *msg, int srcID, int destID, bool& outDrop, simtime_t& outDelay)
+INetfilter::IHook::Result CloudDelayerBase::datagramPostRoutingHook(IPv4Datagram * datagram, const InterfaceEntry * inputInterfaceEntry, const InterfaceEntry *& outputInterfaceEntry, IPv4Address & nextHopAddress)
 {
-    outDrop = false;
-    outDelay = SIMTIME_ZERO;
+    return INetfilter::IHook::ACCEPT;
+}
+
+INetfilter::IHook::Result CloudDelayerBase::datagramLocalInHook(IPv4Datagram * datagram, const InterfaceEntry * inputInterfaceEntry)
+{
+    return INetfilter::IHook::ACCEPT;
+}
+
+INetfilter::IHook::Result CloudDelayerBase::datagramLocalOutHook(IPv4Datagram * datagram, const InterfaceEntry *& outputInterfaceEntry, IPv4Address & nextHopAddress)
+{
+    return INetfilter::IHook::ACCEPT;
 }
 
