@@ -22,8 +22,10 @@ package inet.networklayer.internetcloud;
 //
 // Delay module interface for InternetCloud.
 //
-// Delays or drops the packets based on which interface card the packet 
-// has arrived on and on which interface it is leaving the cloud. 
+// Delays or drops the packets based on which interface card the packet
+// has arrived on and on which interface it is leaving the cloud.
+// This module registers self to IPv4 module as an ~INetFilter::IHook hook
+// and uses the datagramForwardHook for delay/drop packets
 //
 // @see InternetCloud
 //
@@ -31,7 +33,4 @@ moduleinterface ICloudDelayer
 {
     parameters:
         @display("i=block/delay");
-    gates:
-        input ipIn;
-        output ipOut;
 }
