@@ -75,11 +75,14 @@ module InternetCloud
                         multicastTimeToLive = 32;
                         fragmentTimeout = 60s;
                         protocolMapping = "1:0,138:0";
+                        useProxyARP = true; 
+                        routingTableModule = "^.^.routingTable";
                         @display("p=85,95;q=queue");
                     gates:
                         transportIn[1];
                         transportOut[1];
                         queueIn[sizeof(ifIn)];
+                        queueOut[sizeof(ifOut)];
                 }
 
                 delayer: <default("MatrixCloudDelayer")> like ICloudDelayer {
@@ -87,10 +90,9 @@ module InternetCloud
                 }
                 arp: ARP {
                     parameters:
-                        proxyARP = proxyARP;
+                        respondToProxyARP = proxyARP;
+                        routingTableModule = "^.^.routingTable";
                         @display("p=163,206;q=pendingQueue");
-                    gates:
-                        nicOut[sizeof(ifOut)];
                 }
                 icmp: ICMP {
                     parameters:
@@ -107,13 +109,14 @@ module InternetCloud
 
                 icmp.errorOut --> errorHandling.in;
 
-                ip.queueOut --> delayer.ipIn;
-                delayer.ipOut --> arp.ipIn;
+                ip.arpOut --> arp.netwIn;
+                ip.arpIn <-- arp.netwOut;
 
-                // L2 interfaces to IP and from ARP
+                for i=0..sizeof(ifIn)-1 {
+                    ip.queueIn[i] <-- { @display("m=s"); } <-- ifIn[i];
+                }
                 for i=0..sizeof(ifOut)-1 {
-                    ifIn[i] --> InternetCloudTaggerChannel { @display("m=s"); } --> ip.queueIn[i];
-                    ifOut[i] <-- { @display("m=s"); } <-- arp.nicOut[i];
+                    ip.queueOut[i] --> { @display("m=s"); } --> ifOut[i];
                 }
         }
     submodules:
